# fullscreen-tools

./: .gitignore  CMakeLists.txt  README  README.md  SConstruct  capturewindow.cpp  decorations.py  flake.nix  sdl-hack.c  windowhierachy.cpp  windowtool.cpp  windowtool.py
sdl/: README  SConstruct  sdl-hack.sh
